👌 IMPROVE: Added JVM config