@@ -42,6 +42,17 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 }
 
+bootRun {
+	jvmArgs = ['-XX:+UseZGC',
+				'-Xlog:gc*:file=log/linkshorter.gc.log',
+				'-XX:+HeapDumpOnOutOfMemoryError',
+				'-XX:HeapDumpPath=log/crashes/linkshorter.hprof',
+				'-Xss256k',
+				'-Dsun.net.client.defaultConnectTimeout=2000',
+				'-Dsun.net.client.defaultReadTimeout=2000'
+			]
+}
+
 test {
 	useJUnitPlatform()
 }
